# lmwiki

./: .gitignore  AGENTS.md  README.md  SCHEMA.md  pyproject.toml
samples/source/: AI_Productivity.md  Agentic_Coding_with_Claude.md  Baseball_Pitcher_Mechanics.md  Context_and_Memory_Problem.md  Ecosystem_War_Google_OpenAI.md  Gemma4_on_Mac_Studio.md  Local_LLMs_and_LLM_Wiki.md  Model_Release_Fatigue.md  Practical_Limits_of_AI.md  Soccer_Match_Night.md  Soccer_Tactics_Obsession.md
src/: config.py  embed.py  eventlog.py  ingest.py  lint.py  query.py  vectordb.py
src/prompts/: ingest.system.md  ingest.user.md  query.system.md  query.user.md  system.md
src/tools/: set_date.py
