[project]
name = "llm-wiki"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "litellm>=1.83.4",
    "openai>=2.30.0",
    "python-dotenv>=1.0.1",
    "typer>=0.23.1",
    "lancedb>=0.22.0",
    "rank-bm25>=0.2.2",
    "json-repair>=0.59.4",
]

[dependency-groups]
dev = [
    "ruff>=0.15.11",
]
